--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -48,6 +48,9 @@
     <servlet.version>4.0.1</servlet.version>
     <slf4j.version>1.7.30</slf4j.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <sonar.projectKey>turbanoff_h2database</sonar.projectKey>
+    <sonar.organization>turbanoff</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencies>
