--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -35,5 +35,5 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           ./build.sh compile
-          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+          mvn -B -Dmaven.test.skip=true package org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
         working-directory: h2
